# Project-Ditto-v2

./: .env.example  .gitignore  CLAUDE.md  CORRECTED_SCORING.md  CORRECTED_SCORING_v2.md  LICENSE  PROPOSED_CHANGES.md  README.md  RESULTS.md  SESSION_LOG.md  SPEC.md  SUPPLEMENTARY.md  VERIFICATION_REPORT.md  WRITEUP.md  pyproject.toml  requirements.txt
data/: reference_swe.pkl  reference_tb.pkl
data/human_sessions/: SOURCE.md  rejection_log.jsonl
data/swe_bench_verified/: SOURCE.md
data/terminal_bench/: SOURCE.md
results/: scored.json  scored_corrected.json  scored_corrected_v2.json
scripts/: acquire_human.py  acquire_swe.py  acquire_tb.py  build_chains.py  next_steps.sh  run_evaluation.py
scripts/supplementary/: 01_power_analysis.py  02_stratified_breakdowns.py  03_error_analysis.py  04_interaction_analysis.py
src/: aggregation.py  filter.py  normalize.py  observability.py  parser_human.py  parser_swe.py  parser_tb.py  prompt_builder.py  reference.py  renderer.py  runner.py  scorer.py  scorer_corrected.py  scorer_corrected_v2.py  shuffler.py  translation.py
supplementary/: interaction_results.json  power_results.json  stratified_results.json
supplementary/error_analysis/: _status.json  haiku_swe_real_fails.jsonl  haiku_swe_real_matchs.jsonl  haiku_swe_shuffled_fails.jsonl  haiku_swe_shuffled_matchs.jsonl  haiku_tb_real_fails.jsonl  haiku_tb_real_matchs.jsonl  haiku_tb_shuffled_fails.jsonl  (+9 more)
tests/: test_aggregation.py  test_parser_human.py  test_parser_swe.py  test_parser_tb.py  test_pipeline_e2e.py  test_shuffler.py  test_translation.py
(+4932 files in other folders)
